force-app/main/default/objects/CCXR_Feedback__c/CCXR_Feedback__c.object-meta.xml
<CustomObject>
    <label>CCXR_Feedback</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>CCXR_Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>