force-app/main/default/objects/CCXR_Feedback__c/fields/CCXR_Food_Quality__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Food_Quality__c</fullName>
    <label>CCXR_Food Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Poor</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>