force-app/main/default/objects/CCXR_Feedback__c/fields/CCXR_Order__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Order__c</fullName>
    <label>CCXR_Order</label>
    <referenceTo>CCXR_Order__c</referenceTo>
    <relationshipLabel>CCXR_Feedbacks</relationshipLabel>
    <relationshipName>CCXR_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>