force-app/main/default/objects/CCXR_Feedback__c/fields/CCXR_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Suggestions__c</fullName>
    <label>CCXR_Suggestions</label>
    <type>TextArea</type>
</CustomField>